# SpaceArcade

./: .gitignore  MainWindow.xib  SpaceArcade-Info.plist  SpaceArcade_Prefix.pch  VertexShader.txt  main.m
AndroidStudio/: build.gradle  settings.gradle
AndroidStudio/SpaceArcade/: AndroidManifest_to_Del.xml  CMakeLists.txt  build.gradle  proguard-rules.pro
AndroidStudio/SpaceArcade/jni/: Android.mk
AndroidStudio/gradle/wrapper/: gradle-wrapper.properties
AndroidStudio/touch3d/: AndroidManifest.xml  CMakeLists.txt  build.gradle
AndroidStudio/touch3d/jni/: Native.cpp  camera.h  renderer.cpp  renderer.h
AndroidStudio/touch3d/jni/puzzle/: base.h  pieceshower.cpp  solver.cpp  timer.h
AndroidStudio/touch3d/src/com/arm/malideveloper/openglessdk/simplecube/: NativeLibrary.java  TutorialView.java
Classes/cocoa/: EAGLView.h  EAGLView.mm  ShaderAppDelegate.h  ShaderAppDelegate.m
Classes/game/: collider.cpp  collider.h  collisionrules.cpp  collisionrules.h  gameconfig.h  iobject.cpp  iobject.h  physics.cpp  physics.h  regressvisitor.cpp  regressvisitor.h  spacegame.cpp  spacegame.h  visitor.h
Classes/game/objects/: asteroid.cpp  asteroid.h  bullet.cpp  bullet.h  scene.cpp  scene.h  spaceship.cpp  spaceship.h
Classes/math/: boundingbox.cpp  boundingbox.h  common.h  gamemath.h  mat.cpp  mat.h  mat44.cpp  mat44.h  mathutils.h  vector.cpp  vector.h  vector4.cpp
Classes/rendering/: glesrenderer.cpp  glesrenderer.h  glesspacegamerenderer.cpp  glesspacegamerenderer.h  renderer.h  rendererfactory.h  spacegamerenderer.cpp  spacegamerenderer.h
Eclipse/: .classpath  .cproject  .project  AndroidManifest.xml  project.properties
Eclipse/jni/: Android.mk  Application.mk
Eclipse/libs/armeabi-v7a/: gdb.setup
Eclipse/libs/x86/: gdb.setup
Eclipse/res/layout/: activity_main.xml
Eclipse/res/menu/: main.xml
Eclipse/res/values/: strings.xml
Eclipse/res/values-v14/: styles.xml
Eclipse/src/com/example/arcadegame/: ArcadeView.java  GameEngine.java  MainActivity.java
IOS/: SpaceArcade_Prefix.pch
IOS/SpaceArcade.xcodeproj/: noel.pbxuser  noel.perspectivev3  project.pbxproj
IOS/SpaceArcade.xcodeproj/project.xcworkspace/xcuserdata/admin.xcuserdatad/: UserInterfaceState.xcuserstate
IOS/SpaceArcade.xcodeproj/xcuserdata/admin.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
QT/: CMakeLists.txt
QT/src/: main.cpp  mainwindow.cpp  mainwindow.h
SpaceArcade.xcodeproj/: project.pbxproj
SpaceArcade.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
SpaceArcade.xcodeproj/project.xcworkspace/xcuserdata/admin.xcuserdatad/: UserInterfaceState.xcuserstate
SpaceArcade.xcodeproj/project.xcworkspace/xcuserdata/admin.xcuserdatad/xcdebugger/: Expressions.xcexplist
SpaceArcade.xcodeproj/xcuserdata/admin.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
SpaceArcade.xcodeproj/xcuserdata/admin.xcuserdatad/xcschemes/: SpaceArcade.xcscheme  xcschememanagement.plist
src/android/: GameEngine.cpp
src/cocoa/: EAGLView.h  EAGLView.mm
src/game/: collider.cpp  collider.h  collisionrules.cpp  collisionrules.h  gameconfig.h  igame.cpp  igame.h  iobject.cpp  iobject.h  physics.cpp  physics.h  regressvisitor.cpp  regressvisitor.h  spacegame.cpp  spacegame.h  visitor.h
src/game/objects/: asteroid.cpp  asteroid.h  bullet.cpp  bullet.h  gameobjects.h  scene.cpp  scene.h  spaceship.cpp  spaceship.h
src/math/: boundingbox.cpp  boundingbox.h  mat.cpp  mat.h  mat44.cpp  mat44.h  mathutils.cpp  vector.cpp  vector.h  vector4.h
src/rendering/: androidresourceloader.cpp  androidresourceloader.h  fileresourceloader.cpp  fileresourceloader.h  glesrenderer.cpp  glesrenderer.h  glesspacegamerenderer.cpp  glesspacegamerenderer.h  openglrenderer.cpp  openglrenderer.h  renderer.h  rendererfactory.cpp  rendererfactory.h  resourceloader.h  spacegamerenderer.h
